Домашнее задание к занятию "6.1. Типы и структура СУБД"